--- a/header-1-1.html
+++ b/header-1-1.html
@@ -12,34 +12,49 @@
     <!-- Добавить к select-nav класс select-nav_dark-->
     <!-- Добавить к header__burger класс header__burger_dark-->
     <header class="header block">
-      <div class="header__container container"><a class="header__logo" href="#"> <img class="header__logo-img" src="http://via.placeholder.com/158x36" alt=""></a>
-        <nav class="header__nav"> 
-          <ul class="header__nav-list"> 
-            <li class="header__nav-item"> 
-              <div class="select select-nav">
-                <div data-value="">Locations</div>
-                <div data-value="link1"><a class="header__nav-link" href="#">Link 1</a></div>
-                <div data-value="link2"><a class="header__nav-link" href="#">Link 2</a></div>
-                <div data-value="link3"><a class="header__nav-link" href="#">Link 3</a></div>
-                <div data-value="link4"><a class="header__nav-link" href="#">Link 4</a></div>
+      <div class="header__inner">
+        <div class="header__container container"><a class="header__logo" href="#"> <img class="header__logo-img" src="http://via.placeholder.com/158x36" alt=""></a>
+          <nav class="header__nav"> 
+            <ul class="header__nav-list"> 
+              <li class="header__nav-item"> 
+                <div class="select select-nav">
+                  <div data-value="">Locations</div>
+                  <div data-value="link1"><a class="header__nav-link" href="#">Link 1</a></div>
+                  <div data-value="link2"><a class="header__nav-link" href="#">Link 2</a></div>
+                  <div data-value="link3"><a class="header__nav-link" href="#">Link 3</a></div>
+                  <div data-value="link4"><a class="header__nav-link" href="#">Link 4</a></div>
+                </div>
+              </li>
+              <li class="header__nav-item"> <a class="header__nav-link" href="#">Restaurant</a></li>
+              <li class="header__nav-item"> 
+                <div class="select select-nav">
+                  <div data-value="">Services</div>
+                  <div data-value="link1"><a class="header__nav-link" href="#">Link 1</a></div>
+                  <div data-value="link2"><a class="header__nav-link" href="#">Link 2</a></div>
+                </div>
+              </li>
+              <li class="header__nav-item"> <a class="header__nav-link" href="#">Menu</a></li>
+              <li class="header__nav-item"> <a class="header__nav-link" href="#">Contacts</a></li>
+            </ul>
+          </nav>
+          <div class="header__contacts"><a class="header__contacts-tel btn btn_medium" href="#">Call us</a>
+            <button class="header__contacts-btn btn btn_medium btn_black" type="button">Book a table</button>
+          </div>
+          <button class="header__burger" type="button">   <span class="header__burger-item"></span><span class="header__burger-item"></span><span class="header__burger-item"></span></button>
+              <div class="menu">
+                <div class="menu__container container">
+                  <nav class="menu__nav">
+                    <ul class="menu__nav-list">
+                      <li class="menu__nav-item"><a class="menu__nav-link" href="#">Locations</a></li>
+                      <li class="menu__nav-item"><a class="menu__nav-link" href="#">Restaurant</a></li>
+                      <li class="menu__nav-item"><a class="menu__nav-link" href="#">Services</a></li>
+                      <li class="menu__nav-item"><a class="menu__nav-link" href="#">Menu</a></li>
+                      <li class="menu__nav-item"><a class="menu__nav-link" href="#">Contacts</a></li>
+                    </ul>
+                  </nav>
+                </div>
               </div>
-            </li>
-            <li class="header__nav-item"> <a class="header__nav-link" href="#">Restaurant</a></li>
-            <li class="header__nav-item"> 
-              <div class="select select-nav">
-                <div data-value="">Services</div>
-                <div data-value="link1"><a class="header__nav-link" href="#">Link 1</a></div>
-                <div data-value="link2"><a class="header__nav-link" href="#">Link 2</a></div>
-              </div>
-            </li>
-            <li class="header__nav-item"> <a class="header__nav-link" href="#">Menu</a></li>
-            <li class="header__nav-item"> <a class="header__nav-link" href="#">Contacts</a></li>
-          </ul>
-        </nav>
-        <div class="header__contacts"><a class="header__contacts-tel btn btn_medium" href="#">Call us</a>
-          <button class="header__contacts-btn btn btn_medium btn_black" type="button">Book a table</button>
         </div>
-        <button class="header__burger" type="button">   <span class="header__burger-item"></span><span class="header__burger-item"></span><span class="header__burger-item"></span></button>
       </div>
     </header>
   </body>
